# door-monitor

./: .gitignore  Cargo.toml  README.md  deploy-to-pi.sh  example.run-door-monitor.sh  generate-coverage.sh  test_struct.rs
src/: audio.rs  config.rs  door.rs  lib.rs  main.rs  monitor.rs  sms.rs  telegram.rs  utils.rs
tests/: integration_tests.rs
