[package]
name = "door-monitor"
version = "0.1.0"
edition = "2024"

[lib]
name = "door_monitor"
path = "src/lib.rs"

[[bin]]
name = "door-monitor"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.0"
serde_json = "1.0"
